Update platform to use pioarduino ESP32 platform
Switch from standard espressif32 platform to pioarduino variant for better ESP32-S3 AMOLED display support

--- a/platformio.ini
+++ b/platformio.ini
@@ -1,5 +1,5 @@
 [env:waveshare-esp32s3-touch-amoled-164]
-platform = espressif32
+platform = https://github.com/pioarduino/platform-espressif32/releases/download/stable/platform-espressif32.zip
 board = esp32-s3-devkitc-1
 framework = arduino
 board_build.mcu = esp32s3
